[package]
name = "cvr"
version = "0.1.0"
authors = ["LeonineKing1199 <christian.mazakas@gmail.com>"]
edition = "2018"
license = "BSL-1.0"
description = "A collection of image processing algorithms and tools remiscient of OpenCV"
repository = "https://github.com/cvrorg/cvr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.8"
minivec = "0.2.0"

[build-dependencies]
